; ModuleID = '/home/carl/AnghaBench/capstone/extr_utils.c_insn_find.c'
source_filename = "/home/carl/AnghaBench/capstone/extr_utils.c_insn_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i16 @insn_find(%struct.TYPE_4__* %0, i32 %1, i32 %2, i16** %3) #0 {
  %5 = alloca i16, align 2
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i16**, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i16** %3, i16*** %9, align 8
  %10 = load i32, i32* %8, align 4
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = sub i32 %12, 1
  %14 = zext i32 %13 to i64
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i64 %14
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ugt i32 %10, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %4
  store i16 0, i16* %5, align 2
  br label %36

20:                                               ; preds = %4
  %21 = load i16**, i16*** %9, align 8
  %22 = load i16*, i16** %21, align 8
  %23 = icmp eq i16* %22, null
  br i1 %23, label %24, label %29

24:                                               ; preds = %20
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %26 = load i32, i32* %7, align 4
  %27 = call i16* @make_id2insn(%struct.TYPE_4__* %25, i32 %26)
  %28 = load i16**, i16*** %9, align 8
  store i16* %27, i16** %28, align 8
  br label %29

29:                                               ; preds = %24, %20
  %30 = load i16**, i16*** %9, align 8
  %31 = load i16*, i16** %30, align 8
  %32 = load i32, i32* %8, align 4
  %33 = zext i32 %32 to i64
  %34 = getelementptr inbounds i16, i16* %31, i64 %33
  %35 = load i16, i16* %34, align 2
  store i16 %35, i16* %5, align 2
  br label %36

36:                                               ; preds = %29, %19
  %37 = load i16, i16* %5, align 2
  ret i16 %37
}

declare dso_local i16* @make_id2insn(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
